src/objects/Expense__c.object
<CustomObject>
    <description>This captures Expenses</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>14</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fees/Taxes</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Hobby/Entertainment</fullName>
                </value>
                <value>
                    <fullName>Household</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Unplanned</fullName>
                </value>
                <value>
                    <fullName>Special in Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email address to be notified of this expense</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expense_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date the expense was incurred</description>
        <inlineHelpText>Enter the date the expense was incurred</inlineHelpText>
        <label>Expense Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <description>Extra notes about this expense</description>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Expense_Category__c</fullName>
        <description>If specified Other category, please enter what Other category it is</description>
        <inlineHelpText>Enter Other category information if selected &apos;Others&apos; in the category</inlineHelpText>
        <label>Other Expense Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clothing</fullName>
                </value>
                <value>
                    <fullName>Dining Out</fullName>
                </value>
                <value>
                    <fullName>Games</fullName>
                </value>
                <value>
                    <fullName>Groceries</fullName>
                </value>
                <value>
                    <fullName>Housecare</fullName>
                </value>
                <value>
                    <fullName>Incidentals</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Subscriptions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>